tests/paczka1/small_fuzzy/80763045.err
Error in line 3: HayP5dG1a c557 360,8
Error in line 9: MgYjGQC A461 99,8
Error in line 5: 50wjbB S653 14,8
Error in line 11: MgYjGQC S653 76,5
